chore: conditionally enable ipfs support

--- a/.github/workflows/deploy-ipfs.yml
+++ b/.github/workflows/deploy-ipfs.yml
@@ -18,7 +18,7 @@ jobs:
       - name: build
         id: build
         run: |
-          nix build
+          nix build .#website-ipfs
           echo "::set-output name=dist::$(readlink result)"
 
       - name: upload artifact
