--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   ],
   "scripts": {
     "start": "gatsby develop",
-    "build": "gatsby build --prefix-paths",
-    "serve": "gatsby serve --prefix-paths",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
     "clean": "gatsby clean",
     "lint": "eslint .",
-    "pin": "pinata-cli public",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -52,7 +51,7 @@
     "gatsby-plugin-mdx": "^3.6.0",
     "gatsby-plugin-postcss": "^5.6.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
-    "gatsby-plugin-relative-paths": "https://github.com/mpontus/gatsby-plugin-relative-paths/archive/fix-binary-assets.tar.gz",
+    "gatsby-plugin-relative-paths": "https://github.com/mpontus/gatsby-plugin-relative-paths/archive/ipfs.tar.gz",
     "gatsby-plugin-styled-components": "^5.6.0",
     "gatsby-plugin-ts": "^3.1.1",
     "gatsby-plugin-tsconfig-paths": "^1.0.5",
