--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@centrifuge/fabric": "^0.0.3",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "concurrently": "^7.0.0",
     "gatsby": "^4.10.3",
     "nanoid": "^3.2.0",
     "react": "^17.0.1",
@@ -52,6 +53,7 @@
     "gatsby-plugin-styled-components": "^5.6.0",
     "gatsby-plugin-ts": "^3.1.1",
     "gatsby-plugin-tsconfig-paths": "^1.0.5",
+    "husky": "^7.0.4",
     "pinata-upload-cli": "^1.0.4",
     "postcss-inline-base64": "6.2.1",
     "prettier": "^2.5.1",
