--- a/.github/workflows/deploy-ipfs.yml
+++ b/.github/workflows/deploy-ipfs.yml
@@ -5,6 +5,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: styfle/cancel-workflow-action@0.6.0
+        with:
+          access_token: ${{ github.token }}
+
       - uses: actions/checkout@v2
 
       - name: install Nix
