chore(ipfs): check for existing pins before pinning preview

--- a/.github/workflows/deploy-ipfs.yml
+++ b/.github/workflows/deploy-ipfs.yml
@@ -53,10 +53,12 @@ jobs:
 
       - name: pin the website using pinata
         run: |
-          ipfs pin remote service add pinata \
-            https://api.pinata.cloud/psa \
-            ${{ secrets.PINATA_JWT }}
-          ipfs pin remote add --service=pinata "${{ steps.publish.outputs.cid }}"
+          ipfs pin remote service add pinata https://api.pinata.cloud/psa ${{ secrets.PINATA_JWT }}
+
+          cid=${{ steps.publish.outputs.cid }}
+          if ipfs pin remote ls --service=pinata --cid=$cid | grep pinned; then
+            ipfs pin remote add --service=pinata --name=kf-website $cid
+          fi
 
       - uses: jwalton/gh-find-current-pr@v1
         id: finder
