--- a/package.json
+++ b/package.json
@@ -56,8 +56,9 @@
     "husky": "^7.0.4",
     "pinata-upload-cli": "^1.1.0",
     "postcss-font-base64": "^1.0.5",
+    "postcss-inline-base64": "^6.2.1",
     "prettier": "^2.6.1",
-    "typescript": "^4.6.3"
+    "typescript": "4.6.2"
   },
   "packageManager": "yarn@3.1.1"
 }
