--- a/.github/workflows/deploy-ipfs.yml
+++ b/.github/workflows/deploy-ipfs.yml
@@ -22,7 +22,7 @@ jobs:
       - name: build
         id: build
         run: |
-          nix build .#website-ipfs
+          nix build .
           echo "::set-output name=dist::$(readlink result)"
 
       - name: upload artifact
