--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "gatsby-plugin-mdx": "^3.12.1",
     "gatsby-plugin-postcss": "^5.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
-    "gatsby-plugin-relative-paths": "^1.0.1",
+    "gatsby-plugin-relative-paths": "mpontus/gatsby-plugin-relative-paths#ipfs",
     "gatsby-plugin-styled-components": "^5.12.1",
     "gatsby-plugin-ts": "^3.1.1",
     "gatsby-plugin-tsconfig-paths": "^1.0.5",
