--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "husky": "^7.0.4",
     "pinata-upload-cli": "^1.1.0",
     "postcss-font-base64": "^1.0.5",
-    "postcss-inline-base64": "6.2.1",
+    "postcss-inline-base64": "^7.2.2",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   },
