--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@mdx-js/react": "^1.6.22",
     "concurrently": "^7.1.0",
     "gatsby": "^4.12.1",
-    "nanoid": "^3.3.2",
+    "nanoid": "^3.3.3",
     "react": "^18.0.0",
     "react-aria-modal": "^4.0.1",
     "react-dom": "^18.0.0",
@@ -43,13 +43,13 @@
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.10.2",
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "^8.13.0",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "gatsby-plugin-mdx": "^3.12.1",
     "gatsby-plugin-postcss": "^5.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
-    "gatsby-plugin-relative-paths": "mpontus/gatsby-plugin-relative-paths#ipfs",
+    "gatsby-plugin-relative-paths": "kfactory-dev/gatsby-plugin-relative-paths",
     "gatsby-plugin-styled-components": "^5.12.1",
     "gatsby-plugin-ts": "^3.1.1",
     "gatsby-plugin-tsconfig-paths": "^1.0.5",
