--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "dependencies": {
     "@centrifuge/fabric": "^0.0.3",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/mdx": "v1",
+    "@mdx-js/react": "v1",
     "concurrently": "^7.2.1",
     "gatsby": "^4.15.2",
     "nanoid": "^3.3.4",
