--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "prettier": "^2.6.2",
     "typescript": "^4.7.3"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.1.1",
+  "resolutions": {
+    "@types/react": "18.0.12"
+  }
 }
