--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   },
   "dependencies": {
     "@centrifuge/fabric": "^0.0.3",
-    "@mdx-js/mdx": "v1",
-    "@mdx-js/react": "v1",
-    "concurrently": "^7.2.1",
-    "gatsby": "^4.15.2",
-    "nanoid": "^3.3.4",
-    "react": "^18.1.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "concurrently": "^7.2.2",
+    "gatsby": "^4.18.2",
+    "nanoid": "^4.0.0",
+    "react": "^18.2.0",
     "react-aria-modal": "^4.0.1",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-modal-hook": "^3.0.0",
     "styled-components": "^5.3.5",
@@ -32,36 +32,33 @@
   },
   "devDependencies": {
     "@types/mdx-js__react": "^1.5.5",
-    "@types/node": "^17.0.40",
-    "@types/react": "^18.0.12",
+    "@types/node": "^18.0.4",
+    "@types/react": "^18.0.15",
     "@types/react-aria-modal": "^4.0.6",
-    "@types/react-dom": "^18.0.5",
+    "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25",
     "@types/styled-system": "^5.1.15",
-    "@types/youtube": "^0.0.46",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
+    "@types/youtube": "^0.0.47",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "^8.17.0",
+    "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "gatsby-plugin-mdx": "^3.15.2",
-    "gatsby-plugin-postcss": "^5.15.0",
-    "gatsby-plugin-react-helmet": "^5.15.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "gatsby-plugin-mdx": "^3.18.1",
+    "gatsby-plugin-postcss": "^5.18.0",
+    "gatsby-plugin-react-helmet": "^5.18.0",
     "gatsby-plugin-relative-paths": "kfactory-dev/gatsby-plugin-relative-paths",
-    "gatsby-plugin-styled-components": "^5.15.0",
+    "gatsby-plugin-styled-components": "^5.18.0",
     "gatsby-plugin-ts": "^3.1.1",
     "gatsby-plugin-tsconfig-paths": "^1.0.5",
     "husky": "^8.0.1",
     "pinata-upload-cli": "^1.1.0",
     "postcss-font-base64": "^1.0.5",
     "postcss-inline-base64": "^7.2.2",
-    "prettier": "^2.6.2",
-    "typescript": "^4.7.3"
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   },
-  "packageManager": "yarn@3.1.1",
-  "resolutions": {
-    "@types/react": "18.0.12"
-  }
+  "packageManager": "yarn@3.2.1"
 }
